--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="pending">pending</string>
     <string name="friends">FRIENDS</string>
     <string name="favourites">FAVOURITES</string>
+    <string name="win">WIN</string>
 </resources>
