--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="ghs_0_00">GHS 0.00</string>
     <string name="enter_amount">ENTER AMOUNT</string>
     <string name="ghs_500_00_max">GHS 500.00 MAX</string>
+
+    <string name="title_activity_match_in_progress">activityMatchInProgress</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
