--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="title_activity_match_in_progress">activityMatchInProgress</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="delete">DELETE</string>
+    <string name="finding_match">Finding match...</string>
 </resources>
