--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="delete">DELETE</string>
     <string name="finding_match">Finding match...</string>
+    <string name="cardstatus">cardStatus</string>
 </resources>
